templates/openshift4/os4.template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: '(qs-1nltbq5f3) OpenShift+VPC, License: Apache 2.0 (Please do not remove)
  April, 6, 2018'
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Custom Resources
        Parameters:
          - StackDirectorArn
          - KeyGenLambdaArn
      - Label:
          default: Network Configuration
        Parameters:
          - VPCID
          - VPCCIDR
          - PrivateSubnet1ID
          - PrivateSubnet2ID
          - PrivateSubnet3ID
          - PublicSubnet1ID
          - PublicSubnet2ID
          - PublicSubnet3ID
      - Label:
          default: Amazon EC2 Configuration
        Parameters:
          - KeyPairName
          - AmiId
      - Label:
          default: OpenShift Hosts Configuration
        Parameters:
          - MasterInstanceType
          - NodesInstanceType
      - Label:
          default: OpenShift Configuration
        Parameters:
          - OpenshiftContainerPlatformVersion
          - AWSServiceBroker
          - HawkularMetrics
          - ClusterName
          - GlusterFS
          - GlusterStorageSize
          - GlusterStorageType
          - GlusterStorageIops
          - GlusterStorageEncrypted
          - GlusterInstanceType
          - AutomationBroker
          - ClusterConsole
      - Label:
          default: Red Hat Subscription Information
        Parameters:
          - PullSecret
      - Label:
          default: AWS Quick Start Configuration
        Parameters:
          - QSS3BucketName
          - QSS3KeyPrefix
    ParameterLabels:
      KeyPairName:
        default: SSH Key Name
      AmiId:
        default: AMI ID
      QSS3BucketName:
        default: Quick Start S3 Bucket Name
      QSS3KeyPrefix:
        default: Quick Start S3 Key Prefix
      VPCID:
        default: VPC ID
      MasterInstanceType:
        default: Master Instance Type
      NodesInstanceType:
        default: Nodes Instance Type
      OpenshiftContainerPlatformVersion:
        default: Openshift Container Platform Version
      AWSServiceBroker:
        default: AWS Service Broker
      HawkularMetrics:
        default: Hawkular Metrics
      ClusterName:
        default: Cluster Name
      GlusterFS:
        default: GlusterFS
      GlusterStorageSize:
        default: Gluster Storage Size
      GlusterStorageType:
        default: Gluster EBS volume type
      GlusterInstanceType:
        default: Gluster Instance Type
      GlusterStorageIops:
        default: Gluster Storage Iops
      GlusterStorageEncrypted:
        default: Gluster Storage Encrypted
      AutomationBroker:
        default: OpenShift Automation Broker
      ClusterConsole:
        default: Enable the cluster console (requires OpenShift 3.11)
Parameters:

  HostedZoneName:
    Type: String

  IgnitionLocation:
    Type: String

  VPCCIDR:
    Type: String

  PrivateSubnet1ID:
    Description: ID of private subnet 1 in Availability Zone 1 for the Workload (e.g.,
      subnet-a0246dcd)
    Type: String
  PrivateSubnet2ID:
    Description: ID of private subnet 2 in Availability Zone 2 for the Workload (e.g.,
      subnet-b1f432cd)
    Type: String
  PrivateSubnet3ID:
    Description: ID of private subnet 3 in Availability Zone 3 for the Workload (e.g.,
      subnet-b1f4a2cd)
    Type: String

  PublicSubnet1ID:
    Description: ID of private subnet 1 in Availability Zone 1 for the Workload (e.g.,
      subnet-a0246dcd)
    Type: String
  PublicSubnet2ID:
    Description: ID of private subnet 2 in Availability Zone 2 for the Workload (e.g.,
      subnet-b1f432cd)
    Type: String
  PublicSubnet3ID:
    Description: ID of private subnet 3 in Availability Zone 3 for the Workload (e.g.,
      subnet-b1f4a2cd)
    Type: String
  NumberOfAZs:
    Default: 3
    Description: The number of Availability Zones to be used for the deployment. 3 Availability Zones are needed to avoid a single point of failure when using 3 or more master nodes or etcd nodes.  With less than 3 Availability Zones.
    Type: Number
    AllowedValues:
    - 1
    - 3
  NumberOfMaster:
    Default: '3'
    Description: This Deployment requires at least 3 OpenShift Master instances
    Type: String
    AllowedPattern: '^[3579]$|(^[1-9]+[13579]$)'
  NumberOfNodes:
    Default: '3'
    Description: The desired capacity for the OpenShift node instances
    Type: Number
    #OpenShiftMasterELB:
    #  Type: String
  AmiId:
    Description: >-
      OPTIONAL: bring your own AMI. In Enterprise environment, you might
      need to bring your own AMI (with proxy, softwares, ...).
      If the AMI is encrypted, keep in mind that the key policy should allow use of
      the key from AWSServiceRoleForAutoScaling.
      If left blank, we'll use the base RHEL image from your region.
    Type: String
    Default: ""
  KeyPairName:
    Description: Name of an existing EC2 key pair. All instances will launch with
      this key pair.
    Type: AWS::EC2::KeyPair::KeyName
  QSS3BucketName:
    AllowedPattern: ^[0-9a-zA-Z]+([0-9a-zA-Z-]*[0-9a-zA-Z])*$
    ConstraintDescription: Quick Start bucket name can include numbers, lowercase
      letters, uppercase letters, and hyphens (-). It cannot start or end with a hyphen
      (-).
    Default: aws-quickstart
    Description: S3 bucket name for the Quick Start assets. This string can include
      numbers, lowercase letters, uppercase letters, and hyphens (-). It cannot start
      or end with a hyphen (-).
    Type: String
  QSS3KeyPrefix:
    AllowedPattern: ^[0-9a-zA-Z-/]*$
    ConstraintDescription: Quick Start key prefix can include numbers, lowercase letters,
      uppercase letters, hyphens (-), and forward slash (/).
    Default: quickstart-redhat-openshift/
    Description: S3 key prefix for the Quick Start assets. Quick Start key prefix
      can include numbers, lowercase letters, uppercase letters, hyphens (-), and
      forward slash (/).
    Type: String

  PullSecret:
    Type: String

  OpenshiftContainerPlatformVersion:
    Description: OpenShift version to deploy
    Default: '4.3'
    Type: String
    AllowedValues:
      - '4.3'
  VPCID:
    Description: ID of your existing VPC for deployment
    Type: AWS::EC2::VPC::Id

  MasterInstanceType:
    Default: m5.xlarge
    AllowedValues:
      - t3.xlarge
      - t3.2xlarge
      - m5.xlarge
      - m5.2xlarge
      - m5.4xlarge
      - m5.12xlarge
      - c5.large
      - c5.xlarge
      - c5.2xlarge
      - c5.4xlarge
      - c5.9xlarge
      - t2.xlarge
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
    ConstraintDescription: Must contain valid instance type
    Description: Type of EC2 instance for the Master instances
    Type: String
  NodesInstanceType:
    Default: m5.xlarge
    AllowedValues:
      - t3.xlarge
      - t3.2xlarge
      - m5.xlarge
      - m5.2xlarge
      - m5.4xlarge
      - m5.8xlarge
      - m5.12xlarge
      - m5a.4xlarge
      - m5a.8xlarge
      - m5a.12xlarge
      - c5.large
      - c5.xlarge
      - c5.2xlarge
      - c5.4xlarge
      - c5.9xlarge
      - c5.12xlarge
      - c5.18xlarge
      - c5.24xlarge
      - t2.large
      - t2.xlarge
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m4.10xlarge
      - c4.large
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c4.8xlarge
    ConstraintDescription: Must contain valid instance type
    Description: Type of EC2 instance for the Node instances
    Type: String
  AWSServiceBroker:
    Default: Enabled
    Description: Enable the AWS Service Broker
    Type: String
    AllowedValues:
      - Enabled
      - Disabled
  HawkularMetrics:
    Default: Enabled
    Description: Enable Hawkular cluster metrics
    Type: String
    AllowedValues:
      - Enabled
      - Disabled

  ClusterName:
    Default: ""
    Description: Custom cluster name for kubernetes.io/cluster/ tags, if left blank will use the stackname suffixed with the region
    Type: String
  GlusterFS:
    Default: Disabled
    Description: Enable GlusterFS storage cluster
    Type: String
    AllowedValues:
      - Enabled
      - Disabled
  GlusterStorageSize:
    Description: Size in GB of the available storage (will create 3x ebs volumes of this size)
    Type: Number
    Default: 1000
  GlusterStorageType:
    Default: io1
    Description: EBS volume type to use for storage
    Type: String
    AllowedValues:
      - io1
      - gp2
      - st1
  GlusterStorageIops:
    Default: 3000
    Description: EBS volume IOPS to allocate (only applicable if io1 has been selected for GlusterStorageType)
    Type: Number
  GlusterStorageEncrypted:
    Default: 'False'
    Description: Enable EBS encryption for Gluster storage volumes
    Type: String
    AllowedValues:
      - 'False'
      - 'True'
  GlusterInstanceType:
    Default: i3.large
    AllowedValues:
      - i3.large
      - i3.xlarge
      - i3.2xlarge
      - i3.4xlarge
      - i3.8xlarge
      - i3.16xlarge
    ConstraintDescription: Must contain valid instance type
    Description: Type of EC2 instance for the GlusterFS instances
    Type: String
  NumberOfGluster:
    Default: '3'
    Description: This Deployment requires a minimum of 3 Gluster instances
    Type: Number
  AutomationBroker:
    Default: Enabled
    Description: Enable the OpenShift Automation Service Broker
    Type: String
    AllowedValues: [ Enabled, Disabled ]
  ClusterConsole:
    Default: Enabled
    Description: Enable the Cluster Console
    Type: String
    AllowedValues: [ Enabled, Disabled ]

    #  OpenShiftMasterInternalELB:
    #    Description: The ELB Name for the Master nodes
    #    Type: String
    #
  StackDirectorLambdaArn:
    Type: String

  RemoteAccessCIDR:
    Type: String

    #  OpenShiftSecurityGroup:
    #    Description: ''
    #    Type: String
    #
    #  LoadBalancerHostname:
    #    Description: ''
    #    Type: String
    #
  OpenShiftLogGroup:
    Description: ''
    Type: String

  OpenShiftPasswordSecret:
    Description: ''
    Type: String

    #  OpenShiftMasterInternalELBDNSName:
    #    Type: String
    #
    #  OpenShiftMasterInternalELB:
    #    Type: String
    #
    #  OpenShiftMasterInternalELBTargetGroup:
    #    Type: String
    #
    #  ContainerAccessELB:
    #    Type: String
    #
    #  ContainerAccessELBDNSName:
    #    Type: String
Mappings:
  #
  # Removing hyphens because Keys need to be alphanumeric in the 2nd level mapping. See RhcosAmiMap
  RegionDehyphen:
    us-east-1:
      Value: useast1
    us-east-2:
      Value: useast2
    us-west-1:
      Value: uswest1
    us-west-2:
      Value: uswest2
    sa-east-1:
      Value: saeast1
    eu-west-3:
      Value: euwest3
    eu-north-1:
      Value: eunorth1
    ca-central1:
      Value: cacentral1
    ap-southeast-2:
      Value: apsoutheast2
    ap-southeast-1:
      Value: apsoutheast1
    ap-south-1:
      Value: apsouth1
    ap-northeast-2:
      Value: apnortheast2
    ap-northeast-1:
      Value: apnortheast1
    me-south-1:
      Value: mesouth1


  RhcosAmiMap:
    # 3.11 - RHEL-7.7_HVM-20190923-x86_64-0-Hourly2-GP2
    # 4.2  - rhcos-42.80.20191002.0-hvm
    # 4.3  - rhcos-43.81.202001142154.0-hvm
    "4.2":
      useast1: ami-01e7fdcb66157b224
      useast2: ami-0bc59aaa7363b805d
      uswest1: ami-0ba912f53c1fdcdf0
      uswest2: ami-08e10b201e19fd5e7
      saeast1: ami-03f6b71e93e630dab
      euwest3: ami-058ad17da14ff4d0d9
      euwest2: ami-00c74e593125e0096
      euwest1: ami-04370efd78434697b
      eunorth1: ami-0175e9c9d258cc11d
      eucentral1: ami-092b69120ecf915ed
      cacentral1: ami-04419691da69850cf
      apsoutheast2: ami-0391e92574fb09e08
      apsoutheast1: ami-0d76ac0ebaac29e404
      apsouth1: ami-0bd772ba746948d9a
      apnortheast2: ami-014514ae47679721b
      apnortheast1: ami-0426ca3481a088c7b

    "4.3":
      useast1: ami-06f85a7940faa3217
      saeast1: ami-0c80d785b30eef121
      useast2: ami-04a79d8d7cfa540cc
      uswest1: ami-0633b392e8eff25e7
      uswest2: ami-0d231993dddc5cd2e
      euwest3: ami-0049e16104f360df6
      mesouth1: ami-0b03ea038629fd02e
      euwest2: ami-0eef98c447b85ffcd
      euwest1: ami-0e95125b57fa63b0d
      eunorth1: ami-06b7087b2768f644a
      eucentral1: ami-0ceea534b63224411
      cacentral1: ami-0f6d943a1fa9172fd
      apsoutheast2: ami-08929f33bfab49b83
      apsoutheast1: ami-086b93722336bd1d9
      apsouth1: ami-0bf62e963a473068e
      apnortheast2: ami-0ba4f9a0358bcb44a
      apnortheast1: ami-023d0452866845125

Resources:

  NetworkStack:
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: !Sub 'https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}templates/openshift4/os4-network.template.yaml'
      Parameters:
        ClusterName: !Ref ClusterName
        InfrastructureName: !Ref ClusterName
        VpcId: !Ref VPCID
        SubnetId: !Ref PublicSubnet1ID
        HostedZoneName: !Ref HostedZoneName

  OpenShift4Setup:
    Type: Custom::LambdaDeployCF
    Properties:
      Function: DeployCF
      ServiceToken: !Ref StackDirectorLambdaArn


  ValidateEvent:
    Type: AWS::Events::Rule
    Properties:
      Name: !Sub ${ClusterName}-ValidateEvent
      ScheduleExpression:  "rate(1 hour)"
      Targets:
        - Arn: !Ref StackDirectorLambdaArn
          Id: !Sub ${ClusterName}-ValidateDeploymentLambda

  LambdaInvokePermission:
    Type: AWS::Lambda::Permission
    Properties:
      FunctionName: !Ref StackDirectorLambdaArn
      Action: lambda:InvokeFunction
      Principal: events.amazonaws.com
      SourceArn:
        Fn::GetAtt:
          - "ValidateEvent"
          - "Arn"

  MasterSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cluster Security Group
      SecurityGroupIngress:
      - IpProtocol: icmp
        FromPort: 0
        ToPort: 0
        CidrIp: !Ref VPCCIDR
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref VPCCIDR
      - IpProtocol: tcp
        ToPort: 80
        FromPort: 80
        CidrIp: !Ref VPCCIDR
      - IpProtocol: tcp
        ToPort: 443
        FromPort: 443
        CidrIp: !Ref VPCCIDR
      - IpProtocol: tcp
        ToPort: 6443
        FromPort: 6443
        CidrIp: !Ref VPCCIDR
      - IpProtocol: tcp
        FromPort: 22623
        ToPort: 22623
        CidrIp: !Ref VPCCIDR
      - IpProtocol: icmp
        FromPort: 0
        ToPort: 0
        CidrIp: !Ref RemoteAccessCIDR
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: !Ref RemoteAccessCIDR
      - IpProtocol: tcp
        ToPort: 6443
        FromPort: 6443
        CidrIp: !Ref RemoteAccessCIDR
      - IpProtocol: tcp
        ToPort: 80
        FromPort: 80
        CidrIp: !Ref RemoteAccessCIDR
      - IpProtocol: tcp
        ToPort: 443
        FromPort: 443
        CidrIp: !Ref RemoteAccessCIDR
      - IpProtocol: tcp
        FromPort: 22623
        ToPort: 22623
        CidrIp: !Ref RemoteAccessCIDR
      VpcId: !Ref VPCID

  MasterIngressEtcd:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId
      Description: etcd
      FromPort: 2379
      ToPort: 2380
      IpProtocol: tcp

  MasterIngressVxlan:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId
      Description: Vxlan packets
      FromPort: 4789
      ToPort: 4789
      IpProtocol: udp

  MasterIngressInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId
      Description: Internal cluster communication
      FromPort: 9000
      ToPort: 9999
      IpProtocol: tcp

  MasterIngressKube:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId
      Description: Kubernetes kubelet, scheduler and controller manager
      FromPort: 10250
      ToPort: 10259
      IpProtocol: tcp

  MasterIngressIngressServices:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt MasterSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt MasterSecurityGroup.GroupId
      Description: Kubernetes ingress services
      FromPort: 30000
      ToPort: 32767
      IpProtocol: tcp

  BootStrapStack:
    DependsOn: NetworkStack
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: !Sub 'https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}templates/openshift4/os4-instance.template.yaml'
      Parameters:
        InstanceName: !Sub ${ClusterName}-BOOT
        InfrastructureName: !Sub ${ClusterName}
        InstanceType: "i3.large"
        SubnetId: !Ref PrivateSubnet1ID
        RhcosAmi: !If
          - NoRhcosAmiParameter
          - !FindInMap
            - RhcosAmiMap
            - !Ref OpenshiftContainerPlatformVersion
            - !FindInMap
              - RegionDehyphen
              - !Ref AWS::Region
              - Value
          - !Ref AmiId
        BootstrapIgnitionLocation: !Sub ${IgnitionLocation}/${ClusterName}/bootstrap.ign
        MasterSecurityGroupId: !Ref MasterSecurityGroup
        RegisterNlbIpTargetsLambdaArn: !GetAtt 'NetworkStack.Outputs.RegisterNlbIpTargetsLambda'
        ApiTargetGroupArn: !GetAtt 'NetworkStack.Outputs.ServiceTargetGroupArn'
        ServiceTargetGroupArn: !GetAtt 'NetworkStack.Outputs.ApiTargetGroupArn'
        WebTargetGroupArn: !GetAtt 'NetworkStack.Outputs.WebTargetGroupArn'
        WebSSLTargetGroupArn: !GetAtt 'NetworkStack.Outputs.WebSSLTargetGroupArn'
        SSHTargetGroupArn: !GetAtt 'NetworkStack.Outputs.SSHTargetGroupArn'
        HostedZoneName: !Ref HostedZoneName
        ControlPlane: "no"

  ControlPlaneStack:
    DependsOn: BootStrapStack
    Type: AWS::CloudFormation::Stack
    Properties:
      TemplateURL: !Sub 'https://${QSS3BucketName}.s3.amazonaws.com/${QSS3KeyPrefix}templates/openshift4/os4-instance.template.yaml'
      Parameters:
        InstanceName: !Sub ${ClusterName}-AIO
        InfrastructureName: !Sub ${ClusterName}
        InstanceType: "m4.xlarge"
        RhcosAmi: !If
          - NoRhcosAmiParameter
          - !FindInMap
            - RhcosAmiMap
            - !Ref OpenshiftContainerPlatformVersion
            - !FindInMap
              - RegionDehyphen
              - !Ref AWS::Region
              - Value
          - !Ref AmiId
        BootstrapIgnitionLocation: !Sub ${IgnitionLocation}/${ClusterName}/master.ign
        SubnetId: !Ref PrivateSubnet1ID
        MasterSecurityGroupId: !Ref MasterSecurityGroup
        RegisterNlbIpTargetsLambdaArn: !GetAtt 'NetworkStack.Outputs.RegisterNlbIpTargetsLambda'
        ApiTargetGroupArn: !GetAtt 'NetworkStack.Outputs.ServiceTargetGroupArn'
        ServiceTargetGroupArn: !GetAtt 'NetworkStack.Outputs.ApiTargetGroupArn'
        WebTargetGroupArn: !GetAtt 'NetworkStack.Outputs.WebTargetGroupArn'
        WebSSLTargetGroupArn: !GetAtt 'NetworkStack.Outputs.WebSSLTargetGroupArn'
        SSHTargetGroupArn: !GetAtt 'NetworkStack.Outputs.SSHTargetGroupArn'
        HostedZoneName: !Ref HostedZoneName
        ControlPlane: "yes"

Conditions:

    NoRhcosAmiParameter:
      Fn::Equals:
        - !Ref AmiId
        - ""
